# Intel-8080-Emulator

./: .gitignore  CMakeLists.txt  README.md
src/: bdos.c  bdos.h  cpu.c  cpu.h  main.c
